Add the distance wand

--- a/src/main/resources/data/fakewands/lang/en_us.json
+++ b/src/main/resources/data/fakewands/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+	"item.fakewands.distance_wand": "Distance Wand",
 	"item.fakewands.navigation_wand": "Navigation Wand",
 	"item.fakewands.selection_wand": "Selection Wand"
 }
